Fixed Only Receive Party Messages